crates/ruff_linter/src/rules/flake8_implicit_str_concat/snapshots/ruff_linter__rules__flake8_implicit_str_concat__tests__ISC001_ISC.py.snap
---
source: crates/ruff_linter/src/rules/flake8_implicit_str_concat/mod.rs
---
ISC.py:1:5: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
  |
1 | _ = "a" "b" "c"
  |     ^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
2 |
3 | _ = "abc" + "def"
  |
  = help: Combine string literals

ℹ Safe fix
1   |-_ = "a" "b" "c"
  1 |+_ = "ab" "c"
2 2 | 
3 3 | _ = "abc" + "def"
4 4 | 

ISC.py:1:9: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
  |
1 | _ = "a" "b" "c"
  |         ^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
2 |
3 | _ = "abc" + "def"
  |
  = help: Combine string literals

ℹ Safe fix
1   |-_ = "a" "b" "c"
  1 |+_ = "a" "bc"
2 2 | 
3 3 | _ = "abc" + "def"
4 4 | 

ISC.py:38:5: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
36 | )
37 |
38 | _ = """a""" """b"""
   |     ^^^^^^^^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
39 |
40 | _ = """a
   |
   = help: Combine string literals

ℹ Safe fix
35 35 |   b"def"
36 36 | )
37 37 | 
38    |-_ = """a""" """b"""
   38 |+_ = """ab"""
39 39 | 
40 40 | _ = """a
41 41 | b""" """c

ISC.py:40:5: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
38 |   _ = """a""" """b"""
39 |
40 |   _ = """a
   |  _____^
41 | | b""" """c
42 | | d"""
   | |____^ ISC001 (single-line-implicit-string-concatenation)
43 |
44 |   _ = f"""a""" f"""b"""
   |
   = help: Combine string literals

ℹ Safe fix
38 38 | _ = """a""" """b"""
39 39 | 
40 40 | _ = """a
41    |-b""" """c
   41 |+bc
42 42 | d"""
43 43 | 
44 44 | _ = f"""a""" f"""b"""

ISC.py:44:5: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
42 | d"""
43 |
44 | _ = f"""a""" f"""b"""
   |     ^^^^^^^^^^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
45 |
46 | _ = f"a" "b"
   |
   = help: Combine string literals

ℹ Safe fix
41 41 | b""" """c
42 42 | d"""
43 43 | 
44    |-_ = f"""a""" f"""b"""
   44 |+_ = f"""ab"""
45 45 | 
46 46 | _ = f"a" "b"
47 47 | 

ISC.py:46:5: ISC001 (single-line-implicit-string-concatenation) Implicitly concatenated string literals on one line
   |
44 | _ = f"""a""" f"""b"""
45 |
46 | _ = f"a" "b"
   |     ^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
47 |
48 | _ = """a""" "b"
   |
   = help: Combine string literals

ISC.py:48:5: ISC001 (single-line-implicit-string-concatenation) Implicitly concatenated string literals on one line
   |
46 | _ = f"a" "b"
47 |
48 | _ = """a""" "b"
   |     ^^^^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
49 |
50 | _ = 'a' "b"
   |
   = help: Combine string literals

ISC.py:50:5: ISC001 (single-line-implicit-string-concatenation) Implicitly concatenated string literals on one line
   |
48 | _ = """a""" "b"
49 |
50 | _ = 'a' "b"
   |     ^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
51 |
52 | _ = rf"a" rf"b"
   |
   = help: Combine string literals

ISC.py:52:5: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
50 | _ = 'a' "b"
51 |
52 | _ = rf"a" rf"b"
   |     ^^^^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
53 |
54 | # Single-line explicit concatenation should be ignored.
   |
   = help: Combine string literals

ℹ Safe fix
49 49 | 
50 50 | _ = 'a' "b"
51 51 | 
52    |-_ = rf"a" rf"b"
   52 |+_ = rf"ab"
53 53 | 
54 54 | # Single-line explicit concatenation should be ignored.
55 55 | _ = "abc" + "def" + "ghi"

ISC.py:64:10: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
63 | # Multiple strings nested inside a f-string
64 | _ = f"a {'b' 'c' 'd'} e"
   |          ^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
65 | _ = f"""abc {"def" "ghi"} jkl"""
66 | _ = f"""abc {
   |
   = help: Combine string literals

ℹ Safe fix
61 61 | _ = foo + "abc" + bar
62 62 | 
63 63 | # Multiple strings nested inside a f-string
64    |-_ = f"a {'b' 'c' 'd'} e"
   64 |+_ = f"a {'bc' 'd'} e"
65 65 | _ = f"""abc {"def" "ghi"} jkl"""
66 66 | _ = f"""abc {
67 67 |     "def"

ISC.py:64:14: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
63 | # Multiple strings nested inside a f-string
64 | _ = f"a {'b' 'c' 'd'} e"
   |              ^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
65 | _ = f"""abc {"def" "ghi"} jkl"""
66 | _ = f"""abc {
   |
   = help: Combine string literals

ℹ Safe fix
61 61 | _ = foo + "abc" + bar
62 62 | 
63 63 | # Multiple strings nested inside a f-string
64    |-_ = f"a {'b' 'c' 'd'} e"
   64 |+_ = f"a {'b' 'cd'} e"
65 65 | _ = f"""abc {"def" "ghi"} jkl"""
66 66 | _ = f"""abc {
67 67 |     "def"

ISC.py:65:14: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
63 | # Multiple strings nested inside a f-string
64 | _ = f"a {'b' 'c' 'd'} e"
65 | _ = f"""abc {"def" "ghi"} jkl"""
   |              ^^^^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
66 | _ = f"""abc {
67 |     "def"
   |
   = help: Combine string literals

ℹ Safe fix
62 62 | 
63 63 | # Multiple strings nested inside a f-string
64 64 | _ = f"a {'b' 'c' 'd'} e"
65    |-_ = f"""abc {"def" "ghi"} jkl"""
   65 |+_ = f"""abc {"defghi"} jkl"""
66 66 | _ = f"""abc {
67 67 |     "def"
68 68 |     "ghi"

ISC.py:72:5: ISC001 (single-line-implicit-string-concatenation) Implicitly concatenated string literals on one line
   |
71 | # Nested f-strings
72 | _ = "a" f"b {f"c" f"d"} e" "f"
   |     ^^^^^^^^^^^^^^^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
73 | _ = f"b {f"c" f"d {f"e" f"f"} g"} h"
74 | _ = f"b {f"abc" \
   |
   = help: Combine string literals

ISC.py:72:9: ISC001 (single-line-implicit-string-concatenation) Implicitly concatenated string literals on one line
   |
71 | # Nested f-strings
72 | _ = "a" f"b {f"c" f"d"} e" "f"
   |         ^^^^^^^^^^^^^^^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
73 | _ = f"b {f"c" f"d {f"e" f"f"} g"} h"
74 | _ = f"b {f"abc" \
   |
   = help: Combine string literals

ISC.py:72:14: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
71 | # Nested f-strings
72 | _ = "a" f"b {f"c" f"d"} e" "f"
   |              ^^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
73 | _ = f"b {f"c" f"d {f"e" f"f"} g"} h"
74 | _ = f"b {f"abc" \
   |
   = help: Combine string literals

ℹ Safe fix
69 69 | } jkl"""
70 70 | 
71 71 | # Nested f-strings
72    |-_ = "a" f"b {f"c" f"d"} e" "f"
   72 |+_ = "a" f"b {f"cd"} e" "f"
73 73 | _ = f"b {f"c" f"d {f"e" f"f"} g"} h"
74 74 | _ = f"b {f"abc" \
75 75 |     f"def"} g"

ISC.py:73:10: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
71 | # Nested f-strings
72 | _ = "a" f"b {f"c" f"d"} e" "f"
73 | _ = f"b {f"c" f"d {f"e" f"f"} g"} h"
   |          ^^^^^^^^^^^^^^^^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
74 | _ = f"b {f"abc" \
75 |     f"def"} g"
   |
   = help: Combine string literals

ℹ Safe fix
70 70 | 
71 71 | # Nested f-strings
72 72 | _ = "a" f"b {f"c" f"d"} e" "f"
73    |-_ = f"b {f"c" f"d {f"e" f"f"} g"} h"
   73 |+_ = f"b {f"cd {f"e" f"f"} g"} h"
74 74 | _ = f"b {f"abc" \
75 75 |     f"def"} g"
76 76 | 

ISC.py:73:20: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
71 | # Nested f-strings
72 | _ = "a" f"b {f"c" f"d"} e" "f"
73 | _ = f"b {f"c" f"d {f"e" f"f"} g"} h"
   |                    ^^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
74 | _ = f"b {f"abc" \
75 |     f"def"} g"
   |
   = help: Combine string literals

ℹ Safe fix
70 70 | 
71 71 | # Nested f-strings
72 72 | _ = "a" f"b {f"c" f"d"} e" "f"
73    |-_ = f"b {f"c" f"d {f"e" f"f"} g"} h"
   73 |+_ = f"b {f"c" f"d {f"ef"} g"} h"
74 74 | _ = f"b {f"abc" \
75 75 |     f"def"} g"
76 76 | 

ISC.py:84:5: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
83 | # See https://github.com/astral-sh/ruff/issues/12936
84 | _ = "\12""0" # fix should be "\0120"
   |     ^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
85 | _ = "\\12""0" # fix should be "\\120"
86 | _ = "\\\12""0" # fix should be "\\\0120"
   |
   = help: Combine string literals

ℹ Safe fix
81 81 |     + f"second"} d"
82 82 | 
83 83 | # See https://github.com/astral-sh/ruff/issues/12936
84    |-_ = "\12""0" # fix should be "\0120"
   84 |+_ = "\0120" # fix should be "\0120"
85 85 | _ = "\\12""0" # fix should be "\\120"
86 86 | _ = "\\\12""0" # fix should be "\\\0120"
87 87 | _ = "\12 0""0" # fix should be "\12 00"

ISC.py:85:5: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
83 | # See https://github.com/astral-sh/ruff/issues/12936
84 | _ = "\12""0" # fix should be "\0120"
85 | _ = "\\12""0" # fix should be "\\120"
   |     ^^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
86 | _ = "\\\12""0" # fix should be "\\\0120"
87 | _ = "\12 0""0" # fix should be "\12 00"
   |
   = help: Combine string literals

ℹ Safe fix
82 82 | 
83 83 | # See https://github.com/astral-sh/ruff/issues/12936
84 84 | _ = "\12""0" # fix should be "\0120"
85    |-_ = "\\12""0" # fix should be "\\120"
   85 |+_ = "\\120" # fix should be "\\120"
86 86 | _ = "\\\12""0" # fix should be "\\\0120"
87 87 | _ = "\12 0""0" # fix should be "\12 00"
88 88 | _ = r"\12"r"0" # fix should be r"\120"

ISC.py:86:5: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
84 | _ = "\12""0" # fix should be "\0120"
85 | _ = "\\12""0" # fix should be "\\120"
86 | _ = "\\\12""0" # fix should be "\\\0120"
   |     ^^^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
87 | _ = "\12 0""0" # fix should be "\12 00"
88 | _ = r"\12"r"0" # fix should be r"\120"
   |
   = help: Combine string literals

ℹ Safe fix
83 83 | # See https://github.com/astral-sh/ruff/issues/12936
84 84 | _ = "\12""0" # fix should be "\0120"
85 85 | _ = "\\12""0" # fix should be "\\120"
86    |-_ = "\\\12""0" # fix should be "\\\0120"
   86 |+_ = "\\\0120" # fix should be "\\\0120"
87 87 | _ = "\12 0""0" # fix should be "\12 00"
88 88 | _ = r"\12"r"0" # fix should be r"\120"
89 89 | _ = "\12 and more""0" # fix should be "\12 and more0"

ISC.py:87:5: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
85 | _ = "\\12""0" # fix should be "\\120"
86 | _ = "\\\12""0" # fix should be "\\\0120"
87 | _ = "\12 0""0" # fix should be "\12 00"
   |     ^^^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
88 | _ = r"\12"r"0" # fix should be r"\120"
89 | _ = "\12 and more""0" # fix should be "\12 and more0"
   |
   = help: Combine string literals

ℹ Safe fix
84 84 | _ = "\12""0" # fix should be "\0120"
85 85 | _ = "\\12""0" # fix should be "\\120"
86 86 | _ = "\\\12""0" # fix should be "\\\0120"
87    |-_ = "\12 0""0" # fix should be "\12 00"
   87 |+_ = "\12 00" # fix should be "\12 00"
88 88 | _ = r"\12"r"0" # fix should be r"\120"
89 89 | _ = "\12 and more""0" # fix should be "\12 and more0"
90 90 | _ = "\8""0" # fix should be "\80"

ISC.py:88:5: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
86 | _ = "\\\12""0" # fix should be "\\\0120"
87 | _ = "\12 0""0" # fix should be "\12 00"
88 | _ = r"\12"r"0" # fix should be r"\120"
   |     ^^^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
89 | _ = "\12 and more""0" # fix should be "\12 and more0"
90 | _ = "\8""0" # fix should be "\80"
   |
   = help: Combine string literals

ℹ Safe fix
85 85 | _ = "\\12""0" # fix should be "\\120"
86 86 | _ = "\\\12""0" # fix should be "\\\0120"
87 87 | _ = "\12 0""0" # fix should be "\12 00"
88    |-_ = r"\12"r"0" # fix should be r"\120"
   88 |+_ = r"\120" # fix should be r"\120"
89 89 | _ = "\12 and more""0" # fix should be "\12 and more0"
90 90 | _ = "\8""0" # fix should be "\80"
91 91 | _ = "\12""8" # fix should be "\128"

ISC.py:89:5: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
87 | _ = "\12 0""0" # fix should be "\12 00"
88 | _ = r"\12"r"0" # fix should be r"\120"
89 | _ = "\12 and more""0" # fix should be "\12 and more0"
   |     ^^^^^^^^^^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
90 | _ = "\8""0" # fix should be "\80"
91 | _ = "\12""8" # fix should be "\128"
   |
   = help: Combine string literals

ℹ Safe fix
86 86 | _ = "\\\12""0" # fix should be "\\\0120"
87 87 | _ = "\12 0""0" # fix should be "\12 00"
88 88 | _ = r"\12"r"0" # fix should be r"\120"
89    |-_ = "\12 and more""0" # fix should be "\12 and more0"
   89 |+_ = "\12 and more0" # fix should be "\12 and more0"
90 90 | _ = "\8""0" # fix should be "\80"
91 91 | _ = "\12""8" # fix should be "\128"
92 92 | _ = "\12""foo" # fix should be "\12foo"

ISC.py:90:5: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
88 | _ = r"\12"r"0" # fix should be r"\120"
89 | _ = "\12 and more""0" # fix should be "\12 and more0"
90 | _ = "\8""0" # fix should be "\80"
   |     ^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
91 | _ = "\12""8" # fix should be "\128"
92 | _ = "\12""foo" # fix should be "\12foo"
   |
   = help: Combine string literals

ℹ Safe fix
87 87 | _ = "\12 0""0" # fix should be "\12 00"
88 88 | _ = r"\12"r"0" # fix should be r"\120"
89 89 | _ = "\12 and more""0" # fix should be "\12 and more0"
90    |-_ = "\8""0" # fix should be "\80"
   90 |+_ = "\80" # fix should be "\80"
91 91 | _ = "\12""8" # fix should be "\128"
92 92 | _ = "\12""foo" # fix should be "\12foo"
93 93 | _ = "\12" ""  # fix should be "\12"

ISC.py:91:5: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
89 | _ = "\12 and more""0" # fix should be "\12 and more0"
90 | _ = "\8""0" # fix should be "\80"
91 | _ = "\12""8" # fix should be "\128"
   |     ^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
92 | _ = "\12""foo" # fix should be "\12foo"
93 | _ = "\12" ""  # fix should be "\12"
   |
   = help: Combine string literals

ℹ Safe fix
88 88 | _ = r"\12"r"0" # fix should be r"\120"
89 89 | _ = "\12 and more""0" # fix should be "\12 and more0"
90 90 | _ = "\8""0" # fix should be "\80"
91    |-_ = "\12""8" # fix should be "\128"
   91 |+_ = "\128" # fix should be "\128"
92 92 | _ = "\12""foo" # fix should be "\12foo"
93 93 | _ = "\12" ""  # fix should be "\12"
94 94 | 

ISC.py:92:5: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
90 | _ = "\8""0" # fix should be "\80"
91 | _ = "\12""8" # fix should be "\128"
92 | _ = "\12""foo" # fix should be "\12foo"
   |     ^^^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
93 | _ = "\12" ""  # fix should be "\12"
   |
   = help: Combine string literals

ℹ Safe fix
89 89 | _ = "\12 and more""0" # fix should be "\12 and more0"
90 90 | _ = "\8""0" # fix should be "\80"
91 91 | _ = "\12""8" # fix should be "\128"
92    |-_ = "\12""foo" # fix should be "\12foo"
   92 |+_ = "\12foo" # fix should be "\12foo"
93 93 | _ = "\12" ""  # fix should be "\12"
94 94 | 
95 95 | 

ISC.py:93:5: ISC001 (single-line-implicit-string-concatenation) [*] Implicitly concatenated string literals on one line
   |
91 | _ = "\12""8" # fix should be "\128"
92 | _ = "\12""foo" # fix should be "\12foo"
93 | _ = "\12" ""  # fix should be "\12"
   |     ^^^^^^^^ ISC001 (single-line-implicit-string-concatenation)
   |
   = help: Combine string literals

ℹ Safe fix
90 90 | _ = "\8""0" # fix should be "\80"
91 91 | _ = "\12""8" # fix should be "\128"
92 92 | _ = "\12""foo" # fix should be "\12foo"
93    |-_ = "\12" ""  # fix should be "\12"
   93 |+_ = "\12"  # fix should be "\12"
94 94 | 
95 95 | 
96 96 | # Mixed literal + non-literal scenarios
