crates/ruff_linter/src/rules/flake8_implicit_str_concat/snapshots/ruff_linter__rules__flake8_implicit_str_concat__tests__ISC002_ISC.py.snap
---
source: crates/ruff_linter/src/rules/flake8_implicit_str_concat/mod.rs
---
ISC.py:5:5: ISC002 (multi-line-implicit-string-concatenation) Implicitly concatenated string literals over multiple lines
  |
3 |   _ = "abc" + "def"
4 |
5 |   _ = "abc" \
  |  _____^
6 | |     "def"
  | |_________^ ISC002 (multi-line-implicit-string-concatenation)
7 |
8 |   _ = (
  |

ISC.py:74:10: ISC002 (multi-line-implicit-string-concatenation) Implicitly concatenated string literals over multiple lines
   |
72 |   _ = "a" f"b {f"c" f"d"} e" "f"
73 |   _ = f"b {f"c" f"d {f"e" f"f"} g"} h"
74 |   _ = f"b {f"abc" \
   |  __________^
75 | |     f"def"} g"
   | |__________^ ISC002 (multi-line-implicit-string-concatenation)
76 |
77 |   # Explicitly concatenated nested f-strings
   |
